add percent viewed

--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
 </head>
 <body>
 
-	<button class="button">Show Metrics</button>
-	<div class="lightbox"><p class="lightbox-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique molestias excepturi ullam dolor. Nemo aliquam alias inventore illum iusto, corporis quidem incidunt officiis expedita placeat, officia saepe consectetur, ipsum voluptatem.</p></div>
+	<button class="button fix-right">Show Metrics</button>
+
+	<div class="lightbox-screen hidden">
+		<div class="lightbox">
+			<p class="lightbox-content"></p>
+			<button class="button">Dismiss</button>
+		</div>
+	</div>
+
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit impedit officia dolore suscipit fugit, ullam eos ducimus dolores dignissimos ipsam officiis illum optio illo veritatis esse repellat error, consequuntur hic!</p>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, at itaque autem voluptatem, beatae magni nemo rerum quasi est fuga vitae minima quidem a non molestias voluptatum recusandae natus fugit.</p>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est eveniet fugit ullam? Quam ipsam nam tenetur omnis assumenda quasi adipisci fugiat consequuntur dicta nisi magni quo, eum, alias quis, nesciunt!</p>
