add time methods

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 
-	<button class="button fix-right">Show Metrics</button>
+	<button class="button fix-right toggle-button">Show Metrics</button>
 
 	<div class="lightbox-screen hidden">
 		<div class="lightbox">
 			<p class="lightbox-content"></p>
-			<button class="button">Dismiss</button>
+			<button class="button toggle-button">Dismiss</button>
 		</div>
 	</div>
 
@@ -36,6 +36,7 @@
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam quos hic, aliquam praesentium. Neque ipsam iste magni itaque optio maxime eius voluptatum, ab temporibus. Exercitationem assumenda excepturi inventore est corrupti!</p>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt laudantium recusandae vitae, asperiores quisquam porro! Omnis nostrum nemo ipsa tempore ipsam voluptate culpa qui doloremque vitae praesentium? Sequi, delectus, modi.</p>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid sit nulla, voluptatem ipsum aut incidunt eveniet quisquam vel. Rem natus repellat fugiat mollitia dolores iusto harum molestias consectetur officiis, dolore.</p>
+	<button class="button signup-button">Sign Up!!</button>
 	
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 	<script src="main.js"></script>
